--- a/README.org
+++ b/README.org
@@ -14,3 +14,7 @@ CFEngine module to manage =/etc/issue=.
 
 
 Note: So this module depends on the =etc-issue-access= module in order to maintain proper permissions.
+
+** Input
+
+This module takes =etc_issue_content:main.body= as input. This provides a convenient project default. Currently =etc_issue_content:main.footer= and =etc_issue_content:main.header= do not prompt for input, but are available for providing some flexible differentiation across the population of managed hosts.
